# MokaRenderer

./: CMakeLists.txt
cmake/: bullet.cmake  opengl.cmake
inc/moka/assets/: raw_image.h
inc/moka/renderer/: main_loop.h  renderer.h
inc/moka/renderer/components/: camera.h  instanced_mesh.h  mesh.h  model.h
inc/moka/renderer/types/: material.h  vertex.h
inc/moka/renderer/wrappers/: shader.h  texture.h
resources/: base.fragment.glsl  base_instanced.vertex.glsl  base_material.fragment.glsl
src/moka/assets/: raw_image.cpp
src/moka/renderer/: main_loop.cpp  renderer.cpp
src/moka/renderer/components/: camera.cpp  instanced_mesh.cpp  mesh.cpp  model.cpp
src/moka/renderer/wrappers/: shader.cpp  texture.cpp
